# HotMama

./: .dockerignore  .env.example  .gitignore  AUTO_AUDIT_REPORT.json  AUTO_AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_AUTO_AUDIT.md  Dockerfile  MIGRATION.md  PR_DESCRIPTION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: bus.py  config.py  error_handlers.py  errors.py  logging.py  main.py  registry.py  settings.py  validators.py
core/: analysis.py
deploy/: __init__.py
deploy/api/: Dockerfile  requirements.api.txt
deploy/base-images/: README.md
deploy/gui/: Dockerfile  (+1 more)
docker/: __init__.py  start.py
docs/: PLAYER_TRACKING.md  VIDEO_LLM_INTERACTION.md
gradio/: __init__.py
ingest/: artifacts.py  ball_track.py  court_calib.py  depth.py  detector_rt.py  pose.py  tracker.py  video_io.py  video_pipeline.py
llm/: async_client.py  client.py  parsers.py  prompts.py  temporal.py
plugins/: plugin.py  plugins_api.py
prompts/: qwen_volley_system.txt
pydantic/: __init__.py
scoring/: fusion.py  logic.py  stats.py
session/: INTEGRATION_NOTES.md  README.md  api.py  ops.py  schemas.py  service.py  store.py
tests/: conftest.py  test_heatmap.py  test_llm_parser.py  test_plugins.py  test_session_crud.py  test_session_flow.py  test_tracking_fusion.py
tools/: bootstrap.sh  dependencies.py  diagnose.py  ensure_deps.sh  hw_probe.sh  install.py  launch_cpu.sh  launch_gpu.sh  test_compose_smoke.sh
ui/: gradio_app.py
viz/: heatmap.py  overlay.py  overlays.py  trajectory.py
webapp/: presets.py  server.py
(+56 files in other folders)
