[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "hotmama"
version = "0.2.0"
description = "HotMama vision pipeline re-architecture"
requires-python = ">=3.11,<3.12"
readme = "README.md"
keywords = ["vision", "queue", "fastapi"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []
exclude = ["deploy/base-images"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
pretty = true
plugins = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
